<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Umergency</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="placeholder">Placeholder</string>
    <string name="current_status">Current Status</string>
    <string name="description">Message description!</string>

    <!-- Icons -->
    <string name="icon_warning">{fa-exclamation-triangle}</string>
    <string name="icon_facebook">{fa-facebook-square}</string>
    <string name="icon_twitter">{fa-twitter-square}</string>
    <string name="icon_googlep">{fa-google-plus-square}</string>
    <string name="icon_share">{fa-share-square}</string>
    <string name="icon_bars">{fa-bars}</string>
    <string name="icon_home">{fa-home}</string>
    <string name="icon_refresh">{fa-refresh}</string>
    <string name="icon_building">{fa-building-o}</string>
    <string name="icon_info">{fa-info-circle}</string>
    <string name="icon_cog">{fa-cog}</string>
    <string name="icon_drawer_out">{fa-sign-in}</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Update</item>
        <item>Institution</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <string-array name="nav_drawer_icons">
        <item>{fa-home}</item>
        <item>{fa-refresh}</item>
        <item>{fa-building}</item>
        <item>{fa-cog}</item>
        <item>{fa-info-circle}</item>
    </string-array>
</resources>
